cmake_minimum_required(VERSION 3.23)
project(EffectiveModernCPlusPlus)

set(CMAKE_CXX_STANDARD 14)

add_executable(EffectiveModernCPlusPlus main.cpp item1/item1-1.cpp item1/item1-2.cpp item1/item1-3.cpp item1/item1-4.cpp item1/item1-5.cpp item2/item2-1.cpp item2/item2-2.cpp item2/item2-3.cpp item3/item3-1.cpp item3/item3-2.cpp item3/item3-3.cpp item5/item5.cpp item6/item6.cpp item7/item7.cpp)
